updated readme with better instructions + added back executable jar & plugins